<resources>
    <string name="app_name">Olx</string>
    <string name="email">Email</string>
    <string name="senha">Senha</string>
    <string name="logar">Logar</string>
    <string name="cadastrese">Cadastre-se</string>
    <string name="entrar">Entar</string>
    <string name="meus_anuncios">Meus Anúncios</string>
    <string name="sair">Sair</string>
    <string name="cadastrar">Cadastrar / Entrar</string>
    <string name="titulo">Titulo</string>
    <string name="valor">Valor</string>
    <string name="descricao">Descrição</string>
    <string name="telefone">Telefone</string>
    <string name="regiao">Região</string>
    <string name="categoria">Categoria</string>
    <string name="barra">|</string>
    <string name="cadastar_anuncios">Cadastrar Anúncios</string>

    <string-array name="estados">
        <item >AC</item>
        <item >AL</item>
        <item >AM</item>
        <item >BA</item>
        <item >CE</item>
        <item >DF</item>
        <item >ES</item>
        <item >GO</item>
        <item >MG</item>
        <item >MA</item>
        <item >MS</item>
        <item >MT</item>
        <item >PA</item>
        <item >SP</item>
        <item >RJ</item>

    </string-array>
    <string-array name="categoria">
        <item>Automóveis</item>
        <item>Imóveis</item>
        <item>Eletronicos</item>
        <item>Esportes</item>
        <item>Músicas</item>
        <item>Infantil</item>
        <item>Agro</item>
    </string-array>
</resources>