<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:layout_margin="16dp"
    tools:context="Activity.CadastarAnuncios">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="100dp"
        android:layout_marginBottom="16dp"
        android:orientation="horizontal">

        <ImageView
            android:id="@+id/imageView1"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            app:srcCompat="@drawable/padrao" />

        <ImageView
            android:id="@+id/imageView2"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            app:srcCompat="@drawable/padrao" />

        <ImageView
            android:id="@+id/imageView3"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            app:srcCompat="@drawable/padrao" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="16dp"
        android:orientation="horizontal">

        <Spinner
            android:id="@+id/spinner"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:minHeight="48dp"
            android:layout_marginRight="5dp"
            android:background="@drawable/bg_edit_text"
            tools:ignore="SpeakableTextPresentCheck" />

        <Spinner
            android:id="@+id/spinner2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:minHeight="48dp"
            android:background="@drawable/bg_edit_text"
            tools:ignore="SpeakableTextPresentCheck" />

    </LinearLayout>

    <EditText
        android:id="@+id/editTitulo"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:padding="20dp"
        android:hint="@string/titulo"
        android:layout_marginBottom="16dp"
        android:background="@drawable/bg_edit_text"
        android:inputType="text"
        />

    <com.blackcat.currencyedittext.CurrencyEditText
        android:id="@+id/editValor"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:padding="20dp"
        android:hint="@string/valor"
        android:background="@drawable/bg_edit_text"
        android:inputType="textPersonName"
        android:layout_marginBottom="16dp"
        />
    <com.santalu.maskara.widget.MaskEditText
        android:id="@+id/editTelefone"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="number"
        android:padding="20dp"
        android:hint="@string/telefone"
        android:background="@drawable/bg_edit_text"
        android:layout_marginBottom="16dp"
        app:mask="(__) _____-____"
        app:maskCharacter="_"
        app:maskStyle="completable" />




    <EditText
        android:id="@+id/editTDescricao"
        android:layout_width="match_parent"
        android:layout_height="90dp"
        android:layout_marginBottom="16dp"
        android:background="@drawable/bg_edit_text"
        android:ems="10"
        android:hint="@string/descricao"
        android:inputType="textPersonName"
        android:padding="20dp" />

    <Button
        android:id="@+id/bt_cadsatrar_anuncio"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="15dp"
        android:textAllCaps="false"
        android:textColor="@color/white"
        android:textStyle="bold"
        android:textSize="18sp"
        android:text="@string/cadastar_anuncios" />

</LinearLayout>